# oxychat

./: .gitignore  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_PLAN.md  LEARNINGS.md  NEXTJS_MIGRATION_SPEC.md  SETUP_GUIDE.md  claude.md  package.json  test_webhook.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  pyproject.toml  railway.toml  schema.sql  supabase_migration.sql  tsconfig.json
backend/alembic/: env.py
backend/app/: auth.py  constants.py  converters.py  database.py  main.py  models.py  processor.py  prompt.py  transcripts.py  webhook.py
backend/chroma_data/: chroma.sqlite3
backend/migrations/: 0001_s1_t00b_user_profiles_clerk_context.down.sql  0001_s1_t00b_user_profiles_clerk_context.up.sql  0002_s1_t01_enums.down.sql  0002_s1_t01_enums.up.sql  0003_s1_t02_clients.up.sql  0004_s1_t03_projects.up.sql  0005_s1_t04_project_aliases.down.sql  0005_s1_t04_project_aliases.up.sql  0006_s1_t05_project_domains.down.sql  0006_s1_t05_project_domains.up.sql  0007_s1_t06_user_roles.up.sql  0008_s1_t07_client_memberships.down.sql  0008_s1_t07_client_memberships.up.sql  0009_s1_t08_project_memberships.up.sql  0010_s1_t09_transcript_attendees.down.sql  0010_s1_t09_transcript_attendees.up.sql  0011_s1_t10_audit_events.down.sql  0011_s1_t10_audit_events.up.sql  0012_s1_t11_conversations_project_id_nullable.down.sql  0012_s1_t11_conversations_project_id_nullable.up.sql  0013_s1_t15_conversations_project_constraints.down.sql  0013_s1_t15_conversations_project_constraints.up.sql  0017_s2_t13_block_private_relink.down.sql  (+20 more)
(+313 files in other folders)
